// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Product Tile LargerProductTile smoke-test 1`] = `
<div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
  <div class="items-center flex"
       style="gap: 48px;"
  >
    <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
         style="width: 144px; height: 144px; border-radius: 36px;"
    >
      <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
           style="height: 142px; border-radius: 36px;"
      >
        <svg class="text-neutral-1300 dark:text-neutral-000"
             style="width: 96px; height: 96px;"
        >
          <use xlink:href="#sprite-icon-product-pubsub-mono">
          </use>
        </svg>
      </div>
    </div>
    <div class="flex flex-col justify-center">
      <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
         style="font-size: 36px; letter-spacing: 0.06em;"
      >
        Ably
      </p>
      <p class="ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
         style="font-size: 55.3846px;"
      >
        Pub/Sub
      </p>
    </div>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTileWithFilledIcons smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32">
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Pub/Sub
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs to build any realtime experience
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Chat
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Rapidly build chat features and roll-out at scale
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Spaces
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Create collaborative environments in a few lines of code
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          LiveSync
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync database changes with frontend clients
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Asset Tracking
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Simple APIs to build realtime tracking applications
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects">
            </use>
          </svg>
          <svg class="text-neutral-600 dark:text-neutral-700 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <div>
          <div class="table-cell font-sans bg-neutral-300 dark:bg-neutral-1000 rounded-full text-gui-unavailable tracking-widen-0.04 font-bold leading-snug"
               style="font-size: 6px; padding: 2.5px 5px;"
          >
            COMING SOON
          </div>
        </div>
        <p class="ui-text-p2 font-bold text-neutral-700 dark:text-neutral-600"
           style="font-size: 15.3846px;"
        >
          LiveObjects
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across multiple devices
    </p>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTileWithOverriddenStylesAndClick smoke-test 1`] = `
<div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-pink-200 dark:bg-pink-800 hover:bg-pink-600 dark:hover:bg-pink-400 cursor-pointer">
  <div class="items-center flex"
       style="gap: 13.3333px;"
  >
    <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
         style="width: 40px; height: 40px; border-radius: 10px;"
    >
      <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
           style="height: 38px; border-radius: 10px;"
      >
        <svg class="text-neutral-1300 dark:text-neutral-000"
             style="width: 26.6667px; height: 26.6667px;"
        >
          <use xlink:href="#sprite-icon-product-pubsub-mono">
          </use>
        </svg>
      </div>
    </div>
    <div class="flex flex-col justify-center">
      <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
         style="font-size: 10px; letter-spacing: 0.06em;"
      >
        Ably
      </p>
      <p class="ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
         style="font-size: 15.3846px;"
      >
        Pub/Sub
      </p>
    </div>
  </div>
  <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
    Low-level APIs to build any realtime experience
  </p>
</div>
`;

exports[`Components/Product Tile ProductTiles smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32">
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Pub/Sub
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs to build any realtime experience
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Chat
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Rapidly build chat features and roll-out at scale
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Spaces
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Create collaborative environments in a few lines of code
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          LiveSync
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync database changes with frontend clients
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Asset Tracking
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Simple APIs to build realtime tracking applications
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-600 dark:text-neutral-700"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <div>
          <div class="table-cell font-sans bg-neutral-300 dark:bg-neutral-1000 rounded-full text-gui-unavailable tracking-widen-0.04 font-bold leading-snug"
               style="font-size: 6px; padding: 2.5px 5px;"
          >
            COMING SOON
          </div>
        </div>
        <p class="ui-text-p2 font-bold text-neutral-700 dark:text-neutral-600"
           style="font-size: 15.3846px;"
        >
          LiveObjects
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across multiple devices
    </p>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTilesWithoutDescriptionsOrLabels smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32 justify-center">
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-600 dark:text-neutral-700"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Product Tile StaticProductTiles smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32">
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Pub/Sub
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs to build any realtime experience
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Chat
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Rapidly build chat features and roll-out at scale
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Spaces
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Create collaborative environments in a few lines of code
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          LiveSync
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync database changes with frontend clients
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <p class="font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
           style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </p>
        <p class="ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
           style="font-size: 15.3846px;"
        >
          Asset Tracking
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Simple APIs to build realtime tracking applications
    </p>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <div class="p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
           style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <div class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
             style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-600 dark:text-neutral-700"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </div>
      </div>
      <div class="flex flex-col justify-center">
        <div>
          <div class="table-cell font-sans bg-neutral-300 dark:bg-neutral-1000 rounded-full text-gui-unavailable tracking-widen-0.04 font-bold leading-snug"
               style="font-size: 6px; padding: 2.5px 5px;"
          >
            COMING SOON
          </div>
        </div>
        <p class="ui-text-p2 font-bold text-neutral-700 dark:text-neutral-600"
           style="font-size: 15.3846px;"
        >
          LiveObjects
        </p>
      </div>
    </div>
    <p class="ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across multiple devices
    </p>
  </div>
</div>
`;
